--- a/MEAR-267/MEAR-267-ejb/pom.xml
+++ b/MEAR-267/MEAR-267-ejb/pom.xml
@@ -15,6 +15,13 @@
    <name>MEAR-267 EJB module</name>
 
    <dependencies>
+	<!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
+	<dependency>
+	    <groupId>com.google.guava</groupId>
+	    <artifactId>guava</artifactId>
+	    <version>19.0</version>
+	</dependency>
+   		
 
       <!-- Declare the APIs we depend on and need for compilation. All of 
          them are provided by JBoss AS 7 -->
@@ -79,6 +86,11 @@
             <configuration>
                <!-- Tell Maven we are using EJB 3.1 -->
                <ejbVersion>3.1</ejbVersion>
+               <archive>
+               	<manifest>
+               		<addClasspath>true</addClasspath>
+               	</manifest>
+               </archive>
             </configuration>
          </plugin>
       </plugins>
