--- a/MEAR-267-ejb/pom.xml
+++ b/MEAR-267-ejb/pom.xml
@@ -89,6 +89,8 @@
                <archive>
                	<manifest>
                		<addClasspath>true</addClasspath>
+                    <classpathLayoutType>custom</classpathLayoutType>
+                    <customClasspathLayout>lib/$${artifact.groupId}-$${artifact.artifactId}-$${artifact.baseVersion}$${dashClassifier?}.$${artifact.extension}</customClasspathLayout>
                	</manifest>
                </archive>
             </configuration>
