--- a/pom.xml
+++ b/pom.xml
@@ -79,9 +79,21 @@
          <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.10</version>
+            <version>4.13</version>
             <type>jar</type>
             <scope>test</scope>
+         </dependency>
+         <dependency>
+            <groupId>org.jboss.arquillian</groupId>
+            <artifactId>arquillian-bom</artifactId>
+            <version>1.6.0.Final</version>
+            <type>pom</type>
+            <scope>import</scope>
+         </dependency>
+         <dependency>
+            <groupId>org.wildfly.arquillian</groupId>
+            <artifactId>wildfly-arquillian-container-managed</artifactId>
+            <version>2.2.0.Final</version>
          </dependency>
 
       </dependencies>
@@ -93,6 +105,7 @@
             <!-- Compiler plugin enforces Java 1.6 compatibility and activates 
                annotation processors -->
             <plugin>
+               <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>2.3.2</version>
                <configuration>
@@ -100,7 +113,27 @@
                   <target>1.6</target>
                </configuration>
             </plugin>
-            <!-- The JBoss AS plugin deploys your ear to a local JBoss AS 
+            <plugin>
+               <groupId>org.apache.maven.plugins</groupId>
+               <artifactId>maven-resources-plugin</artifactId>
+               <version>3.2.0</version>
+            </plugin>
+            <plugin>
+               <groupId>org.apache.maven.plugins</groupId>
+               <artifactId>maven-dependency-plugin</artifactId>
+               <version>3.1.2</version>
+            </plugin>
+            <plugin>
+               <groupId>org.apache.maven.plugins</groupId>
+               <artifactId>maven-jar-plugin</artifactId>
+               <version>3.2.0</version>
+            </plugin>
+            <plugin>
+               <groupId>org.apache.maven.plugins</groupId>
+               <artifactId>maven-failsafe-plugin</artifactId>
+               <version>3.0.0-M5</version>
+            </plugin>
+            <!-- The JBoss AS plugin deploys your ear to a local JBoss AS
                container -->
             <!-- Due to Maven's lack of intelligence with EARs we need to 
                configure the jboss-as maven plugin to skip deployment for all modules. We 
