--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
 
    <properties>
       <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+      <jboss.version>7.1.1.Final</jboss.version>
    </properties>
 
    <dependencyManagement>
@@ -86,14 +87,14 @@
          <dependency>
             <groupId>org.jboss.arquillian</groupId>
             <artifactId>arquillian-bom</artifactId>
-            <version>1.6.0.Final</version>
+            <version>1.4.1.Final</version>
             <type>pom</type>
             <scope>import</scope>
          </dependency>
          <dependency>
-            <groupId>org.wildfly.arquillian</groupId>
-            <artifactId>wildfly-arquillian-container-managed</artifactId>
-            <version>2.2.0.Final</version>
+            <groupId>org.jboss.as</groupId>
+            <artifactId>jboss-as-arquillian-container-managed</artifactId>
+            <version>${jboss.version}</version>
          </dependency>
 
       </dependencies>
@@ -116,7 +117,7 @@
             <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
-               <version>3.2.0</version>
+               <version>3.1.0</version>
             </plugin>
             <plugin>
                <groupId>org.apache.maven.plugins</groupId>
@@ -131,7 +132,7 @@
             <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
-               <version>3.0.0-M5</version>
+               <version>2.22.2</version>
             </plugin>
             <!-- The JBoss AS plugin deploys your ear to a local JBoss AS
                container -->
