--- a/MEAR-267-web/pom.xml
+++ b/MEAR-267-web/pom.xml
@@ -53,12 +53,17 @@
    <build>
       <plugins>
          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-war-plugin</artifactId>
-            <version>2.1.1</version>
             <configuration>
                <!-- Java EE 6 doesn't require web.xml, Maven needs to catch 
                   up! -->
                <failOnMissingWebXml>false</failOnMissingWebXml>
+               <archive>
+                  <manifest>
+                     <addClasspath>true</addClasspath>
+                  </manifest>
+               </archive>
             </configuration>
          </plugin>
       </plugins>
