--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,10 @@
    <properties>
       <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
       <maven-ear-plugin.version>3.0.2</maven-ear-plugin.version>
+      <maven-assembly-plugin.version>3.3.0</maven-assembly-plugin.version>
+      <build-helper-maven-plugin.version>3.2.0</build-helper-maven-plugin.version>
+      <wildfly.version>21.0.1.Final</wildfly.version>
+      <resource.delimiter>@{*}</resource.delimiter>
    </properties>
 
    <dependencyManagement>
@@ -78,6 +82,12 @@
 
          <!-- Test dependencies -->
          <dependency>
+            <groupId>org.wildfly</groupId>
+            <artifactId>wildfly-dist</artifactId>
+            <version>${wildfly.version}</version>
+            <type>tar.gz</type>
+         </dependency>
+         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.13</version>
@@ -138,6 +148,25 @@
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-ear-plugin</artifactId>
                <version>${maven-ear-plugin.version}</version>
+            </plugin>
+            <plugin>
+               <groupId>org.apache.maven.plugins</groupId>
+               <artifactId>maven-assembly-plugin</artifactId>
+               <version>${maven-assembly-plugin.version}</version>
+               <configuration>
+                  <delimiters>
+                     <delimiter>${resource.delimiter}</delimiter>
+                  </delimiters>
+                  <overrideUid>0</overrideUid>
+                  <overrideUserName>root</overrideUserName>
+                  <overrideGid>0</overrideGid>
+                  <overrideGroupName>root</overrideGroupName>
+               </configuration>
+            </plugin>
+            <plugin>
+               <groupId>org.codehaus.mojo</groupId>
+               <artifactId>build-helper-maven-plugin</artifactId>
+               <version>${build-helper-maven-plugin.version}</version>
             </plugin>
             <plugin>
                <groupId>org.apache.maven.plugins</groupId>
